--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ colorama==0.4.3
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.17.4
+pgzero==1.2
+pygame==1.9.6
 pylint==2.4.4
 six==1.13.0
 typed-ast==1.4.0
